app/assets/stylesheets/nav.scss
@import "fonts.scss"; //montserrat and open sans

.navbar-header {
  margin:auto !important;
}

.navbar-brand {
  font-family: 'Montserrat', sans-serif;
  text-transform: uppercase;
}

.navbar {
  .nav {
    font-family: 'Open Sans', sans-serif;
    text-transform: uppercase;
    letter-spacing: 3px;
    font-size: 1.2rem;
    max-width:100%;
  }
}

.navbar-inverse {
  background-color: #FFF;
}

.navbar-collapse {
  max-height: none !important;
}

.navbar-inverse .navbar-nav>.active>a:hover,
.navbar-inverse .navbar-nav>li>a:hover,
.navbar-inverse .navbar-nav>li>a:focus {
  background-color: #EEE;
}

.navbar-inverse .navbar-nav>.active>a,
.navbar-inverse .navbar-nav>.open>a,
.navbar-inverse .navbar-nav>.open>a,
.navbar-inverse .navbar-nav>.open>a:hover,
.navbar-inverse .navbar-nav>.open>a,
.navbar-inverse .navbar-nav>.open>a:hover,
.navbar-inverse .navbar-nav>.open>a:focus {
  background-color: #FFF;
}

.dropdown-menu {
  background-color: #FFF;
}

.dropdown-menu>li>a:hover,
.dropdown-menu>li>a:focus {
  background-color: #EEE;
}

.navbar-inverse {
  background-image: none;
}

.dropdown-menu>li>a:hover,
.dropdown-menu>li>a:focus {
  background-image: none;
}

.navbar-inverse {
  border-color: #CCC;
}

.navbar-inverse .navbar-brand {
  color: #191919;
}

.navbar-inverse .navbar-brand:hover {
  color: #191919;
}

.navbar-inverse .navbar-nav>li>a {
  color: #191919;
  font-size:14px;
}

.navbar-inverse .navbar-nav>li>a:hover,
.navbar-inverse .navbar-nav>li>a:focus {
  color: #191919;
}

.navbar-inverse .navbar-nav>.active>a,
.navbar-inverse .navbar-nav>.open>a,
.navbar-inverse .navbar-nav>.open>a:hover,
.navbar-inverse .navbar-nav>.open>a:focus {
  color: #191919;
}

.navbar-inverse .navbar-nav>.active>a:hover,
.navbar-inverse .navbar-nav>.active>a:focus {
  color: #191919;
}

.dropdown-menu>li>a {
  color: #191919;
}

.dropdown-menu>li>a:hover,
.dropdown-menu>li>a:focus {
  color: #191919;
}

.navbar-inverse .navbar-nav>.dropdown>a .caret {
  border-top-color: #191919;
}

.navbar-inverse .navbar-nav>.dropdown>a:hover .caret {
  border-top-color: #191919;
}

.navbar-inverse .navbar-nav>.dropdown>a .caret {
  border-bottom-color: #191919;
}

.navbar-inverse .navbar-nav>.dropdown>a:hover .caret {
  border-bottom-color: #191919;
}


.dropdown {
  position: relative;
  display: inline-block;
}
.dropdown-menu {
  display: none;
  position: absolute;
  z-index: 1;
}
.dropdown:hover .dropdown-menu {
  display: block;
}

a.navbar-brand {
    margin:0px;
    padding:0px;
}

img.logo {
    width:150px;
}

li.blue {
  background-color:#CCC;
}

